@@ -50,29 +50,6 @@ public:
   /// \brief return a pointer to object ChppciServer::hppPlanner.
   ChppPlanner *getHppPlanner();
 
-  /**
-     \name Mutex operations
-     @{
-  */
-
-  /**
-     \brief Wait for the mutex to be unlocked and lock it.
-  */
-  void waitForMutex();
-
-  /**
-     \brief Unlock the mutex
-  */
-  void unlockMutex();
-
-  /**
-     \brief Test whether mutex is locked
-     \return true if the mutex is unlocked, false otherwise
-  */
-  bool testMutexUnlocked();
-  /**
-     @}
-  */
   // 
   // Static public
   // 
@@ -88,13 +65,6 @@ private:
   /// At initialization, the constructor creates a ChppPlanner object and keeps a pointer to it. All Corba requests are processed by this object. Notice that this pointer is passed to each constructor of implementation classes of the server Corba interface.
   ChppPlanner *hppPlanner;
 
-  /**
-     \brief Semaphore that protects access to data-structures manipulated by CORBA.
-     
-     CORBA requests are handled by separate threads. They may therefore run concurrently.
-     The data manipulated by the request thus need to be protected by a semaphor.
-  */
-  pthread_mutex_t attRequestMutex;
 };
 
 #endif
